--- a/api-tests/build.gradle
+++ b/api-tests/build.gradle
@@ -5,6 +5,9 @@ plugins {
 group 'br.com.tqi.bootcamp.bookstore'
 version '1.0-SNAPSHOT'
 
+java.sourceCompatibility = JavaVersion.VERSION_17
+java.targetCompatibility = JavaVersion.VERSION_17
+
 repositories {
     mavenCentral()
 }
@@ -14,7 +17,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
 
-    testImplementation 'io.rest-assured:rest-assured:5.1.0'
+    testImplementation 'io.rest-assured:rest-assured:5.1.1'
 
 }
 
